# web_crawler

./: Cargo.toml  README.md
src/: cli.rs  crawler.rs  fetcher.rs  main.rs  output.rs  parser.rs
