[package]
name = "web_crawler"
version = "0.1.0"
description = "A simple web crawler implemented in Rust."
edition = "2024"
authors = ["kunal171"]

[dependencies]
tokio = { version = "1", features = ["full"] } # Asynchronous runtime for Rust
reqwest = { version = "0.12", features = ["rustls-tls"] }# HTTP client for making requests
scraper = "0.22" # HTML parsing library for Rust
url = "2.2" # URL parsing library for Rust
log = "0.4" # Logging library for Rust